--- a/pom.xml
+++ b/pom.xml
@@ -17,33 +17,7 @@
     <junit.version>4.12</junit.version>
   </properties>
   <dependencies>
-	<!-- Spring -->
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-core</artifactId>
-        <version>${springframework.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-web</artifactId>
-        <version>${springframework.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-webmvc</artifactId>
-        <version>${springframework.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-tx</artifactId>
-        <version>${springframework.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-orm</artifactId>
-        <version>${springframework.version}</version>
-    </dependency>
-
+	
     <!-- Hibernate -->
     <dependency>
         <groupId>org.hibernate</groupId>
@@ -77,7 +51,7 @@
     <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
-        <version>${mysql.connector.version}</version>
+        <version>${mysql.connector.version}</version>git 
     </dependency>
 
     <!-- Joda-Time -->       
@@ -110,15 +84,8 @@
         <artifactId>jstl</artifactId>
         <version>1.2</version>
     </dependency>
-     
-     
+      
     <!-- Testing dependencies -->
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-test</artifactId>
-        <version>${springframework.version}</version>
-        <scope>test</scope>
-    </dependency>
     <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
