--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
     <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
-        <version>${mysql.connector.version}</version>git 
+        <version>${mysql.connector.version}</version>
     </dependency>
 
     <!-- Joda-Time -->       
