--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ target/BarMazeto.war
 target/BarMazeto/
 target/generated-sources/
 target/generated-test-sources/
+target
 *.class
 .idea/dataSources.ids
 .idea/dataSources.local.xml
 .idea/dataSources.xml
+.project
+.classpath
